PHOENIX-4252 Remove BaseClientManagedTimeIT as it's no longer used